--- a/assets/Style2025.css
+++ b/assets/Style2025.css
@@ -1,8 +1,10 @@
 
+
 /* Color variables */
 :root {
     --violet: #730275;
     --red: #c00202;
+    --dark-red: #850303;
     --grey0: #c2c1c1;
     --grey1: #a1a1a1;
     --grey2: #7a7777;
@@ -15,7 +17,6 @@
     --foreground-medium: var(--grey1);
     --foreground-light: var(--grey0);
     
-
     --fancy-gradient: linear-gradient(
       in rgba to bottom right,
       var(--violet),
@@ -38,11 +39,13 @@
 }
 
 a {
-    color: var(--violet);
+    color: var(--dark-red);
     padding-right: 5vw;
-    
 }
 
+h2 {
+    color: var(--dark-red)
+}
 
 body {
     padding: 2vw 2vw 2vw 2vw;
@@ -77,10 +80,7 @@ footer p {
 
 #flexcontainer div {
     display: inline;
-    /* width: 10px; */
     align-items: flex-end;
-    
-
 }
 
 #flexcontainer2 {
@@ -92,11 +92,8 @@ footer p {
 
 #flexcontainer2 div {
     display: inline;
-    /* width: 10px; */
     justify-content: center;
     align-items: center;
-    
-
 }
 
 .logo img {
@@ -122,7 +119,6 @@ footer p {
     font-size: 2vw;
 }
 
-
 nav li, li {
     list-style: none;
     display: inline;
@@ -130,17 +126,9 @@ nav li, li {
     
 }
 
-/* 
-div.logo img {
-    width: 35%;
-    border-radius: 3%;
-    /* float:left; 
-} */
-
 section {
     padding: 2vw 2vw;
     border-radius: 0.5vw;
-    
 }
 
 section.dark {
@@ -158,14 +146,14 @@ section.light {
 /* Definition for a 5 column design, used once */
 div.gallery {
     display: grid;
-    
     grid-template-columns: repeat(5, 1fr);
     column-gap: 2vw;
-    /* padding-right: 200px; */
 }
+
 div.gallery p {
     align-items: center;
 }
+
 div.gallery img {
     width: 100%;
     align-items: center;
@@ -178,14 +166,12 @@ div.gallery img {
 /* Definition for a 3 column design, used twice */
 div.gallery2 {
     display: grid;
-    
     grid-template-columns: repeat(3, 1fr);
-    /* column-gap: 1rem; */
-    /* padding-right: 200px; */
+    column-gap: 0vw;
 }
 
 div.gallery2 figure img {
-    width: 22vw;
+    width: 100%;
     align-items: center;
     border-radius: 1vw;
     border-style: groove;
@@ -198,23 +184,17 @@ table {
     
 }
 
-
 .socialm li img {
     padding-right: 2vw;
     width: 10vw;
-    
 }
-
 
 .pricing-table {
     background-color: var(--grey0);
     border-spacing: 0.75vw;
-    
-    
 }
 
 tr, td, th {
-    /* padding: 0.5vw; */
     font-size: 1.5vw;
 }
 
@@ -226,33 +206,47 @@ tr, td, th {
     color: var(--white)
 }
 
+input[type=radio] {
+    border: 0px;
+    width: 2vw;
+    height: 2vw;
+}
+
+
+
 
 
 /* ADDING RESPONSIVE DESIGN PARAMETERS AFTER FINALIZING PROT-A */
-@media only screen and (max-width: 600px) {
-    /* CSS rules for extra small screens */
-  }
+@media only screen and (max-width: 350) {
+    /* from 3 to 2 */
+    div.gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    /* from 2 to 1 */
+    div.gallery2 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
    
   /* Small devices (portrait tablets and large phones, 600px to 768px) */
-  @media only screen and (min-width: 601px) and (max-width: 768px) {
-    /* CSS rules for small screens */
-  }
+@media only screen and (min-width: 351) and (max-width: 1000px) {
+    /* from 5 to 3 */
+    div.gallery {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2vw;
+    }
+    
+    /* from 3 to 2 */
+    div.gallery2 {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
    
-  /* Medium devices (landscape tablets, 768px to 992px) */
-  @media only screen and (min-width: 769px) and (max-width: 992px) {
-    /* CSS rules for medium screens */
-  }
-   
-  /* Large devices (laptops/desktops, 992px to 1200px) */
-  @media only screen and (min-width: 993px) and (max-width: 1200px) {
-    /* CSS rules for large screens */
-  }
-   
-  /* Extra large devices (large desktops, 1200px and up) */
-  @media only screen and (min-width: 1201px) {
-    /* CSS rules for extra large screens */
-  }
-
 
 
 
